--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@mcschema/core": "^0.11.0",
     "@spgoding/datapack-language-server": "3.0.7",
     "minimatch": "^3.0.4",
+    "synchronous-promise": "^2.0.15",
     "ts-node": "^9.0.0",
+    "vscode-json-languageservice": "^3.10.0",
     "vscode-languageserver-textdocument": "^1.0.1",
     "vscode-uri": "^2.1.2"
   },
