--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "datapack-linter",
   "version": "1.0.0",
   "description": "Processing to lint datapack with GitHub Action",
-  "main": "src/index.ts",
+  "author": "ChenCMD",
+  "license": "MIT",
   "scripts": {
-    "build": "tsc -p ./",
-    "lint": "eslint --fix src/**/*.ts",
-    "lint-dp": "ts-node src/index"
+    "lint": "eslint --fix scripts/**/*.ts",
+    "lint-dp": "ts-node scripts/index"
   },
   "dependencies": {
     "@actions/core": "^1.2.6",
@@ -21,8 +21,6 @@
     "vscode-languageserver-textdocument": "^1.0.1",
     "vscode-uri": "^2.1.2"
   },
-  "author": "ChenCMD",
-  "license": "MIT",
   "devDependencies": {
     "@types/minimatch": "^3.0.3",
     "@types/node": "^14.14.6",
