--- a/.github/workflows/lint-datapack.yml
+++ b/.github/workflows/lint-datapack.yml
@@ -21,8 +21,13 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
             ${{ runner.os }}-
+
       - name: Install Dependencies
-        run: npm i
+        run: |
+          cd datapack-linter
+          npm i
 
       - name: lint
-        run: npm run lint-dp
+        run: |
+          cd datapack-linter
+          npm run lint-dp
