add javascript file

--- a/.github/workflows/lint-datapack.yml
+++ b/.github/workflows/lint-datapack.yml
@@ -24,11 +24,8 @@ jobs:
 
       - name: Install Dependencies
         run: |
-          cd datapack-linter
           npm i
 
       - name: lint
         run: |
-          echo "::add-matcher::datapack-linter/matcher.json"
-          cd datapack-linter
-          npm run lint-dp
+          npm run lint-dp-node
