--- a/.github/workflows/lint-datapack.yml
+++ b/.github/workflows/lint-datapack.yml
@@ -23,4 +23,4 @@ jobs:
             ${{ runner.os }}-
 
       - name: Test
-        uses: ChenCMD/datapack-linter@v1
+        uses: ChenCMD/datapack-linter@main
