--- a/package.json
+++ b/package.json
@@ -8,12 +8,9 @@
     "type": "git",
     "url": "https://github.com/ChenCMD/datapack-linter"
   },
-  "main": "dist/index.js",
   "scripts": {
-    "build": "tsc -p ./",
     "lint": "eslint --fix scripts/**/*.ts",
-    "lint-dp": "ts-node scripts/index",
-    "lint-dp-node": "node dist/index"
+    "lint-dp": "ts-node scripts/index"
   },
   "dependencies": {
     "@actions/core": "^1.2.6",
