--- a/.github/workflows/lint-datapack-dev.yml
+++ b/.github/workflows/lint-datapack-dev.yml
@@ -28,6 +28,6 @@ jobs:
       - name: test
         run: |
           git clone -b test-datapack https://github.com/ChenCMD/datapack-linter.git
-          echo "::add-matcher::datapack-linter/matcher.json"
+          echo "::add-matcher::matcher.json"
           npm i
           npm run lint-dp
