--- a/.github/workflows/lint-datapack-dev.yml
+++ b/.github/workflows/lint-datapack-dev.yml
@@ -11,6 +11,7 @@ jobs:
     name: lint
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    steps:
       - name: clone test datapack
         run: |
           git clone -b test-datapack https://github.com/ChenCMD/datapack-linter.git datapack
