--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@actions/core": "^1.2.6",
     "@spgoding/datapack-language-server": "^3.1.2",
+    "strip-json-comments": "^3.1.1",
     "synchronous-promise": "^2.0.15",
     "vscode-json-languageservice": "3.6.0",
     "vscode-languageserver-textdocument": "^1.0.1",
