--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "url": "https://github.com/ChenCMD/datapack-linter"
   },
   "scripts": {
-    "lint": "eslint --fix scripts/**/*.ts",
-    "lint-dp": "ts-node scripts/index"
+    "build": "webpack --mode production"
   },
   "dependencies": {
     "@actions/core": "^1.2.6",
@@ -27,7 +26,10 @@
     "@typescript-eslint/eslint-plugin": "^4.14.0",
     "@typescript-eslint/parser": "^4.14.0",
     "eslint": "^7.18.0",
+    "ts-loader": "^8.0.14",
     "ts-node": "^9.1.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "webpack": "^5.19.0",
+    "webpack-cli": "^4.4.0"
   }
 }
