--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,6 @@
         "target": "ESNext",
         "rootDir": "scripts",
         "outDir": "dist",
-        "declarationDir": "decs",
         "noFallthroughCasesInSwitch": true,
         "noImplicitAny": true,
         "noImplicitReturns": true,
@@ -15,12 +14,12 @@
         "pretty": true,
         "alwaysStrict": true,
         "strictNullChecks": true,
-        "declaration": true,
         "newLine": "LF",
         "resolveJsonModule": true
     },
     "exclude": [
-        "node_modules"
+        "out",
+        "dist"
     ],
     "include": [
         "scripts/**/*.json",
