Revert "update build setting"
This reverts commit a1ad9e19686758af8f5b8345fd6c5aec6d9c1369.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,13 +15,11 @@
         "alwaysStrict": true,
         "strictNullChecks": true,
         "newLine": "LF",
-        "resolveJsonModule": true,
-        "lib": [
-            "ES2017"
-        ]
+        "resolveJsonModule": true
     },
     "exclude": [
-        "node_modules"
+        "out",
+        "dist"
     ],
     "include": [
         "scripts/**/*.json",
