--- a/.github/workflows/lint-datapack-dev.yml
+++ b/.github/workflows/lint-datapack-dev.yml
@@ -18,3 +18,7 @@ jobs:
 
       - name: test
         uses: ChenCMD/datapack-linter@dev
+
+      - name: test
+        run: |
+          pwd;find . | sort | sed '1d;s/^\.//;s/\/\([^/]*\)$/|--\1/;s/\/[^/|]*/|  /g'
