--- a/action.yml
+++ b/action.yml
@@ -9,5 +9,5 @@ branding:
   color: green
 inputs:
   DEBUG:
-    description: 'Setting this argument to \'true\' will force the test to pass.'
+    description: 'Setting this argument to "true" will force the test to pass.'
     required: false
