--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -106,6 +106,7 @@
             "never"
         ],
         "no-empty-function": "off",
-        "@typescript-eslint/no-empty-function": "off"
+        "@typescript-eslint/no-empty-function": "off",
+        "@typescript-eslint/no-non-null-assertion": "off"
     }
 }
