--- a/.github/workflows/lint-datapack-dev.yml
+++ b/.github/workflows/lint-datapack-dev.yml
@@ -20,4 +20,4 @@ jobs:
         uses: ChenCMD/datapack-linter@dev
         with:
           DEBUG: 'true'
-          outputDeclare: 'public'
+          outputDefine: 'public'
