--- a/.github/workflows/lint-datapack-dev.yml
+++ b/.github/workflows/lint-datapack-dev.yml
@@ -12,6 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
     steps:
+      - name: clone test datapack
+        run: |
+          git clone -b test-datapack https://github.com/ChenCMD/datapack-linter.git ./
+
       - name: test
         uses: ChenCMD/datapack-linter@dev
         with:
