--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "test": "ts-node scripts/index.ts"
   },
   "dependencies": {
+    "@actions/cache": "^1.0.6",
     "@actions/core": "^1.2.6",
+    "@actions/github": "^4.0.0",
     "@spgoding/datapack-language-server": "^3.3.0",
     "strip-json-comments": "^3.1.1",
     "synchronous-promise": "^2.0.15",
