--- a/.github/workflows/lint-datapack-dev.yml
+++ b/.github/workflows/lint-datapack-dev.yml
@@ -12,9 +12,10 @@ jobs:
     runs-on: ubuntu-latest
     if: "!contains(github.event.head_commit.message, '[skip ci]')"
     steps:
-      - name: clone test datapack
-        run: |
-          git clone -b test-datapack https://github.com/ChenCMD/datapack-linter.git ./
+      - name: checkout
+        uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: test
         uses: ChenCMD/datapack-linter@dev
