--- a/action.yml
+++ b/action.yml
@@ -9,5 +9,17 @@ branding:
   color: green
 inputs:
   outputDefine:
-    description: 'Shows the definition that the resource path passed in the argument can be referenced. Also, if "public" is specified as an argument, the declaration that can be referenced from the whole is displayed. This argument can describe multiple resource paths by using line breaks.'
+    description: 'Displays the define/declare that match the input resource path.'
+    required: false
+  forcePass:
+    description: 'If set to "true", it will not fail even if there are files that failed to be checked.'
+    required: false
+  notOutputSuccess:
+    description: 'If set to "true", do not output the log of files that have been successfully checked.'
+    required: false
+  ignoreLintPathPattern:
+    description: 'Do not check for files that match the entered globPattern.'
+    required: false
+  checkAlwaysAllFile:
+    description: 'If set to "true", it will always check all files without using the cache.'
     required: false
