Does not work properly with Re-run jobs
Fix #7

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,5 +62,6 @@
     "datapack.lint.strictItemTagCheck": [
         "error",
         true
-    ]
+    ],
+    "typescript.tsdk": "node_modules\\typescript\\lib"
 }
