--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@actions/core": "^1.2.7",
     "@actions/github": "^4.0.0",
     "@spgoding/datapack-language-server": "^3.3.2",
+    "jsonc-parser": "^2.3.1",
     "minimatch": "^3.0.4",
     "strip-json-comments": "^3.1.1",
     "synchronous-promise": "^2.0.15",
