Fix deleting cache when change irrelevant settings

--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@actions/core": "^1.2.7",
     "@actions/github": "^4.0.0",
     "@spgoding/datapack-language-server": "^3.3.8",
+    "@types/object-hash": "^2.2.1",
     "jsonc-parser": "^2.3.1",
     "minimatch": "^3.0.4",
+    "object-hash": "^2.2.0",
     "strip-json-comments": "^3.1.1",
     "synchronous-promise": "^2.0.15",
     "vscode-json-languageservice": "3.6.0",
