--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "datapack-linter",
-  "version": "1.3.12",
+  "version": "2.0.0",
   "description": "Processing to lint datapack with GitHub Action",
   "author": "ChenCMD",
   "license": "MIT",
@@ -9,34 +9,8 @@
     "url": "https://github.com/ChenCMD/datapack-linter"
   },
   "scripts": {
-    "build": "webpack --mode development",
-    "test": "ts-node scripts/index.ts"
-  },
-  "dependencies": {
-    "@actions/cache": "^3.1.2",
-    "@actions/core": "^1.10.0",
-    "@actions/github": "^5.1.1",
-    "@spgoding/datapack-language-server": "^3.4.7",
-    "@types/object-hash": "^2.2.1",
-    "jsonc-parser": "^3.2.0",
-    "minimatch": "^3.0.4",
-    "object-hash": "^2.2.0",
-    "strip-json-comments": "^3.1.1",
-    "synchronous-promise": "^2.0.15",
-    "vscode-json-languageservice": "3.6.0",
-    "vscode-languageserver-textdocument": "^1.0.1",
-    "vscode-uri": "^2.1.2"
-  },
-  "devDependencies": {
-    "@types/minimatch": "^3.0.4",
-    "@types/node": "^14.14.44",
-    "@typescript-eslint/eslint-plugin": "^4.22.1",
-    "@typescript-eslint/parser": "^4.22.1",
-    "eslint": "^7.26.0",
-    "ts-loader": "^8.2.0",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.4",
-    "webpack": "^5.36.2",
-    "webpack-cli": "^4.7.0"
+    "build": "sbt fullOptJS/webpack && mv dist/datapack-linter-opt-bundle.js dist/index.js",
+    "build:dev": "sbt fastOptJS/webpack && mv dist/datapack-linter-fastopt-bundle.js dist/index.js",
+    "test": "node dist/main.js"
   }
 }
