:wrench: vscodeの設定を修正

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -63,5 +63,8 @@
         "error",
         true
     ],
-    "typescript.tsdk": "node_modules\\typescript\\lib"
+    "typescript.tsdk": "node_modules\\typescript\\lib",
+    "files.watcherExclude": {
+        "**/target": true
+    }
 }
