--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "build": "sbt fullOptJS/webpack && mv dist/datapack-linter-opt-bundle.js dist/index.js",
     "build:dev": "sbt fastOptJS/webpack && mv dist/datapack-linter-fastopt-bundle.js dist/index.js",
-    "test": "node dist/main.js"
+    "test": "node dist/index.js",
+    "dev": "yarn build:dev && yarn test"
   }
 }
