:see_no_evil: .gitignoreにworksheetとローカル動作用jsonファイルを追加

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,4 @@
-node_modules
 .cache
-.vscode/tasks.json
-decs
-*.js.map
-matcher.json
 
 **/.bloop
 **/.bsp
@@ -12,4 +7,8 @@ matcher.json
 project/**
 !project/build.properties
 !project/plugins.sbt
+
 target
+
+*.worksheet.sc
+linter-config.json
