--- a/.github/workflows/lint-datapack-dev.yml
+++ b/.github/workflows/lint-datapack-dev.yml
@@ -3,18 +3,14 @@ on:
   push:
   workflow_dispatch:
 jobs:
-  lint:
-    name: lint
+  build:
+    name: build
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     steps:
       - name: checkout
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
 
-      - name: test
-        uses: ChenCMD/datapack-linter@dev
-        with:
-          outputDefine: 'public'
-          forcePass: true
+      - name: build
+        run: yarn build:dev
