:green_heart: CI上でbuild時にメモリが足りなくなるのを修正

--- a/.github/workflows/lint-datapack-dev.yml
+++ b/.github/workflows/lint-datapack-dev.yml
@@ -12,5 +12,8 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: install dependencies
+        run: yarn install
+
       - name: build
         run: yarn build:dev
