--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,5 +66,10 @@
     "typescript.tsdk": "node_modules\\typescript\\lib",
     "files.watcherExclude": {
         "**/target": true
+    },
+    "files.exclude": {
+        ".bsp": true,
+        ".bloop": true,
+        ".metals": true
     }
 }
