--- a/.github/workflows/lint-datapack-dev.yml
+++ b/.github/workflows/lint-datapack-dev.yml
@@ -1,19 +1,55 @@
-name: lint-datapack
+name: Test run and Deploy to dist branch
 on:
   push:
+    branches-ignore:
+      - "dist"
+  pull_request:
   workflow_dispatch:
 jobs:
-  build:
-    name: build
+  test-run-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: checkout
+      - name: Checkout
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
-      - name: install dependencies
+      - name: Cache Node dependencies
+        uses: actions/cache@v3
+        with:
+          id: node-deps
+          path: "./node_modules"
+          key: ${{ runner.os }}-node-deps-${{ hashFiles('./yarn.lock') }}
+
+      - name: Cache SBT dependencies
+        uses: actions/cache@v3
+        with:
+          id: sbt-deps
+          path: |
+            '~/.sbt'
+            '~/.ivy2/cache'
+            '~/.ivy2/local/org.scalablytyped'
+            './target/scala-*/scalajs-bundler/node_modules'
+          key: ${{ runner.os }}-sbt-deps-${{ hashFiles('./build.sbt') }}
+
+      - name: Install Node dependencies
         run: yarn install
 
-      - name: build
-        run: yarn build:dev
+      - name: Test run
+        run: yarn dev
+        with:
+          forcePass: true
+          ignoreLintPathPattern: 'test:ignore/**'
+
+      - name: Pre deploy
+        if: ${{ github.ref == 'ref/heads/main' }}
+        run: cp action.yml README.md dist/.
+
+      - name: Deploy to dist
+        if: ${{ github.ref == 'ref/heads/main' }}
+        uses: actions-js/push@v1.4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: dist
+          directory: dist
+          message: Compiled from ${{ github.SHA }}
