--- a/.github/workflows/lint-datapack-dev.yml
+++ b/.github/workflows/lint-datapack-dev.yml
@@ -14,7 +14,7 @@ jobs:
           fetch-depth: 0
 
       - name: test
-        uses: ChenCMD/datapack-linter@dev
+        uses: ChenCMD/datapack-linter@main
         with:
           outputDefine: 'public'
           forcePass: true
