--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:dev": "dotenv cross-var sbt fastOptJS/webpack && mv dist/datapack-linter-fastopt-bundle.js dist/index.js",
     "test": "node dist/index.js test/linter-config.json",
     "dev": "yarn build:dev && yarn test",
-    "lint": "sbt scalafix"
+    "sfix": "sbt scalafix"
   },
   "devDependencies": {
     "cross-var": "^1.1.0",
