--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "dotenv cross-var sbt fullOptJS/webpack && mv dist/datapack-linter-opt-bundle.js dist/index.js",
     "build:dev": "dotenv cross-var sbt fastOptJS/webpack && mv dist/datapack-linter-fastopt-bundle.js dist/index.js",
     "test": "node dist/index.js test/linter-config.json",
-    "dev": "yarn build:dev && yarn test",
+    "dev": "yarn build:dev && rm -r .cache/ && yarn test",
     "sfix": "sbt scalafix"
   },
   "devDependencies": {
