:art: フォーマットを調整

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,9 +1,10 @@
 version = "3.6.1"
 project.git = true
 runner.dialect = scala3
-maxColumn = 100
+maxColumn = 120
 indent {
   defnSite = 2
+  callSite = 2
   ctorSite = 2
 }
 danglingParentheses {
@@ -18,6 +19,9 @@ align {
   openParenDefnSite = false
 }
 newlines {
+  neverInResultType = true
+  neverBeforeJsNative = true
+  sometimesBeforeColonInMethodReturnType = false
   beforeMultiline = fold
   beforeCurlyLambdaParams = multilineWithCaseOnly
 }
