:rotating_light: yarn test で actions/cache が動作しないのを修正

--- a/.github/workflows/lint-datapack-dev.yml
+++ b/.github/workflows/lint-datapack-dev.yml
@@ -36,8 +36,14 @@ jobs:
       - name: Build for production
         run: yarn build
 
+      - uses: peaceiris/actions-export-envs@v1.1.0
+        id: envs
+
       - name: Test run
         run: yarn test
+        env:
+          ACTIONS_RUNTIME_TOKEN: ${{ steps.envs.outputs.ACTIONS_RUNTIME_TOKEN }}
+          ACTIONS_CACHE_URL: ${{ steps.envs.outputs.ACTIONS_CACHE_URL }}
 
       - name: Pre deploy
         if: ${{ github.ref == 'ref/heads/main' }}
