:green_heart: デプロイが正常に行われないのを修正

--- a/.github/workflows/lint-datapack-dev.yml
+++ b/.github/workflows/lint-datapack-dev.yml
@@ -56,5 +56,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: dist
-          directory: dist
+          directory: ./dist
           message: Compiled from ${{ github.SHA }}
