:construction_worker: dist にビルドするシステムを修正

--- a/.github/workflows/lint-datapack-dev.yml
+++ b/.github/workflows/lint-datapack-dev.yml
@@ -46,9 +46,18 @@ jobs:
           ACTIONS_RUNTIME_TOKEN: ${{ steps.envs.outputs.ACTIONS_RUNTIME_TOKEN }}
           ACTIONS_CACHE_URL: ${{ steps.envs.outputs.ACTIONS_CACHE_URL }}
 
+      - name: Checkout dist branch
+        if: ${{ github.ref == 'refs/heads/main' }}
+        uses: actions/checkout@v3
+        with:
+          ref: dist
+          path: ./dist
+
       - name: Pre deploy
         if: ${{ github.ref == 'refs/heads/main' }}
-        run: cp action.yml README.md dist/.
+        run: |
+          rm -rf dist/*
+          cp action.yml README.md dist/.
 
       - name: Deploy to dist
         if: ${{ github.ref == 'refs/heads/main' }}
