:green_heart: dist ディレクトリで動作しないのを修正

--- a/action.yml
+++ b/action.yml
@@ -3,7 +3,7 @@ author: chen
 description: Processing to lint datapack
 runs:
   using: node16
-  main: 'dist/index.js'
+  main: 'index.js'
 branding:
   icon: box
   color: green
