--- a/.github/workflows/lint-datapack-dev.yml
+++ b/.github/workflows/lint-datapack-dev.yml
@@ -55,6 +55,7 @@ jobs:
         env:
           ACTIONS_RUNTIME_TOKEN: ${{ steps.envs.outputs.ACTIONS_RUNTIME_TOKEN }}
           ACTIONS_CACHE_URL: ${{ steps.envs.outputs.ACTIONS_CACHE_URL }}
+          INPUT_GITHUB_TOKEN: ${{ github.token }}
 
       - name: Pre deploy
         if: ${{ github.ref == 'refs/heads/main' }}
