--- a/.github/workflows/lint-datapack-dev.yml
+++ b/.github/workflows/lint-datapack-dev.yml
@@ -51,10 +51,13 @@ jobs:
         id: envs
 
       - name: Run
-        run: yarn test-run
+        run: yarn test-gh-run
         env:
           ACTIONS_RUNTIME_TOKEN: ${{ steps.envs.outputs.ACTIONS_RUNTIME_TOKEN }}
           ACTIONS_CACHE_URL: ${{ steps.envs.outputs.ACTIONS_CACHE_URL }}
+          INPUT_GITHUB_TOKEN: ${{ github.token }}
+          INPUT_IGNORELINTPATHPATTERN: test:ignore/**
+          INPUT_FORCEPASS: true
 
       - name: Pre deploy
         if: ${{ github.ref == 'refs/heads/main' }}
