:bug: GITHUB_TOKEN が設定できないのを修正

--- a/action.yml
+++ b/action.yml
@@ -8,6 +8,10 @@ branding:
   icon: box
   color: green
 inputs:
+  GITHUB_TOKEN:
+    description: 'A GitHub token. It is recommended that this token be set when using linter in pull_request events.'
+    required: false
+    default: ''
   lintDirectory:
     description: 'Lint base directory.'
     required: false
